--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -9,6 +9,11 @@ requirements = []
 path = 'contracts/algorithm-registry.clar'
 clarity_version = 2
 epoch = 2.5
+
+[contracts.bounty-manager]
+path = 'contracts/bounty-manager.clar'
+clarity_version = 2
+epoch = 2.5
 [repl.analysis]
 passes = ['check_checker']
 
